--- a/Bunny Storytelling/Resources/Info.plist
+++ b/Bunny Storytelling/Resources/Info.plist
@@ -20,7 +20,7 @@
 		<string>icon1024.png</string>
 	</array>
 	<key>CFBundleIdentifier</key>
-	<string>com.stevenfu.Diamond</string>
+	<string>salice.BunnyStroytelling</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
